--- a/tailwind/table.css
+++ b/tailwind/table.css
@@ -6,6 +6,10 @@ article table {
 	@apply w-full caption-bottom text-sm;
 }
 
+article table:not(.codehilitetable):not(.highlighttable) {
+	@apply min-w-0 max-w-full;
+}
+
 article table thead {
 	@apply [&_tr]:border-b;
 }
@@ -14,16 +18,16 @@ article table tr {
 	@apply hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors;
 }
 
-article table thead tr th {
-	@apply text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px];
+article table:not(.codehilitetable):not(.highlighttable) thead tr th {
+	@apply text-foreground h-10 px-2 text-left align-top font-medium whitespace-normal break-words [&:has([role=checkbox])]:whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px];
 }
 
 article table tbody {
 	@apply [&_tr:last-child]:border-0;
 }
 
-article table tbody tr td {
-	@apply p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px];
+article table:not(.codehilitetable):not(.highlighttable) tbody tr td {
+	@apply p-2 align-top whitespace-normal break-words [&:has([role=checkbox])]:whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px];
 }
 
 article .table-wrapper {
